--- a/MiBiblio.bib
+++ b/MiBiblio.bib
@@ -499,4 +499,11 @@ year = {2018}
   year={1999},
   publisher={SIAM}
 }
+@misc{Softmax,
+author = {Eli Bendersky's website},
+title = {The Softmax function and its derivative},
+year = {2016},
+howpublished = "https://eli.thegreenplace.net/2016/the-softmax-function-and-its-derivative/}",
+urldate = {24-05-2021}
+}
 
